--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -152,18 +152,31 @@ const predict = async () => {
     <div class="col-md-6">
         <br> </br>
         <h5> Introduction </h5>
-        <p> This is a project that reveals my development philosophy </p>
-        <p> Before starting this project, we didnt consider how to develop a program, we considered <b>how to solve a problem</b>. </p>
-        <p> So we met calligrapher several times, and asked what he need from the perspective of <b>teaching/learning calligraphy</b></p>
-        <p> Calligraphy has both artistic and academic meanings. </p>
-        <p> In fact, when evaluating calligraphy in a calligraphy contest, it is included that an evaluation of which typeface was reproduced in the past. </p>
+        <p> - This is a project that reveals my development philosophy </p>
+        <p> - Before starting this project, we didnt consider how to develop a program, we considered <b>how to solve a problem</b>. </p>
+        <p> - So we met calligrapher several times, and asked what he need from the perspective of <b>teaching/learning calligraphy</b></p>
+        <p> - Calligraphy has both artistic and academic meanings. </p>
+        <p> - In fact, when evaluating calligraphy in a calligraphy contest, it is included that an evaluation of which typeface was reproduced in the past. </p>
     </div>
     <div class="col-md-6">
         meet professor image
         <img src="./assets/img/cal_intro.jpg" width="90%"></img>
+        <div style="text-align:center"> Various style of Calligraphy </div>
     </div>
 </div>
-    
+<div class="row g-5 mb-5">
+    <div class="col-md-6">
+        <img src="./assets/img/cal_model.jpg" width="90%"></img>
+    </div>
+    <div class="col-md-6">
+        <h5> Model Separation </h5>
+        <p> - We sparated models by appearance model that predict what is the character is, and semantic model that evaluate how much the character resembled to the old challigrapher's characters </p>
+        <br> </br>
+        <h5> Data Collection </h5>
+        <p> - CharactersTrimPad28: 15,000,000 of character dataset, used for training appearance model</p>
+        <p> - Kaggle Chinese Calligraphy styles by Calligraphers: a dataset with handwritings of 20 famous old challigraphers, used for training semantic model</p>
+    </div>
+</div>
     
     
     
