--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -152,7 +152,7 @@ const predict = async () => {
     <div class="col-md-6">
         <br> </br>
         <h5> Introduction </h5>
-        <p> - This is a project that reveals my development philosophy </p>
+        <p> - This is a project that reveals my development philosophy. </p>
         <p> - Before starting this project, we didnt consider how to develop a program, we considered <b>how to solve a problem</b>. </p>
         <p> - So we met calligrapher several times, and asked what he need from the perspective of <b>teaching/learning calligraphy</b></p>
         <p> - Calligraphy has both artistic and academic meanings. </p>
@@ -177,8 +177,21 @@ const predict = async () => {
         <p> - Kaggle Chinese Calligraphy styles by Calligraphers: a dataset with handwritings of 20 famous old challigraphers, used for training semantic model</p>
     </div>
 </div>
-    
-    
+<div class="row g-5 mb-5">
+    <div class="col-md-6">
+        <h5> Training Models </h5>
+        <p> - By above datasets, we trained two models based on CNN </p>
+        <br> </br>
+        <h5> Results </h5>
+        <p> Appearance model - Precision 98.9%, F1 score 98.4%</p>
+        <p> Semantic model - Precision 98.5%, F1 score 99.0%</p>
+    </div>
+    <div class="col-md-6">
+        <img src="./assets/img/cal_model1.jpg" width="90%"></img>
+        <img src="./assets/img/cal_model2.jpg" width="90%"></img>
+    </div>
+</div> 
+
     
     
     
