--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -192,7 +192,7 @@ const predict = async () => {
     </div>
 </div> 
 
-    
+<iframe width="560" height="315" src="https://www.youtube.com/embed/v7sp5i0UEQI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     
     
