--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -190,8 +190,8 @@ const predict = async () => {
         <img src="./assets/img/cal_model1.jpg" width="90%"></img>
         <img src="./assets/img/cal_model2.jpg" width="90%"></img>
     </div>
-</div> 
-
+</div>
+<h6> Presentation video </h6>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/v7sp5i0UEQI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     
