--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -114,7 +114,7 @@ const img = document.getElementById('img');
 // const input = tf.zeros([227, 500, 3]);
 // ...
 var canvas = document.getElementById('person');
-// canvas.style.width = '90%';
+canvas.style.width = '90%';
 ctx = canvas.getContext('2d');
 const demo_clear_img = new Image();
 demo_clear_img.src = "/assets/img/demo_clear.jpg";
