--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -206,7 +206,7 @@ const predict = async () => {
     
     
     
-<h4 class="b" id="frcnn"><A href = "https://github.com/HyeongminMoon/FRCNN_trademark_similarity">(2020) Rank search by image similarity and multi label classificaion </A></h4>
+<h4 class="b" id="frcnn"><A href = "https://github.com/HyeongminMoon/FRCNN_trademark_similarity">(2020) Rank search by image similarity and multi label classification </A></h4>
 
 
 <h5> Multi label classification </h5>
