--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -70,7 +70,8 @@
 
 <div class="row g-5 mb-5">
     <div class="col-md-6">
-        <img id="img" src="./assets/img/demo1.jpg" alt="" width="90%"/>
+        
+        <img id="img" src="https://user-images.githubusercontent.com/32811724/147175762-2749386f-3c38-4a8a-89a5-80928e00e381.jpg" alt="" width="90%"/>
         <input type="button" id="button1" onclick="predict();" value="demo"/>
         <form method="post" enctype="multipart/form-data">
         <input type="file" id="button2" onchange="changeimg(this);" accpet="image/*" value="upload image"/>
@@ -160,13 +161,13 @@ const predict = async () => {
     </div>
     <div class="col-md-6">
         meet professor image
-        <img src="./assets/img/cal_intro.jpg" width="90%"></img>
+        <img src="https://user-images.githubusercontent.com/32811724/147175911-a20f1c23-6dbc-457c-978a-feafa7071c44.jpg" width="90%"></img>
         <div style="text-align:center"> Various style of Calligraphy </div>
     </div>
 </div>
 <div class="row g-5 mb-5">
     <div class="col-md-6">
-        <img src="./assets/img/cal_model.jpg" width="90%"></img>
+        <img src="https://user-images.githubusercontent.com/32811724/147175816-bca1fd7a-4d96-44d6-ba9c-f234ee27510c.jpg" width="90%"></img>
     </div>
     <div class="col-md-6">
         <h5> Model Separation </h5>
@@ -191,8 +192,8 @@ const predict = async () => {
 
     </div>
     <div class="col-md-6">
-        <img src="./assets/img/cal_model1.jpg" width="90%"></img>
-        <img src="./assets/img/cal_model2.jpg" width="90%"></img>
+        <img src="https://user-images.githubusercontent.com/32811724/147175817-221effa6-9729-4c47-a386-50c2fba399fa.jpg" width="90%"></img>
+        <img src="https://user-images.githubusercontent.com/32811724/147175818-a14b4694-d217-41e1-a2ab-de2788f68a64.jpg" width="90%"></img>
     </div>
 </div>
     
@@ -218,9 +219,9 @@ const predict = async () => {
 <p> - For example, the trademarks' viennacodes distribution is not flat because many trademark contain a Creature.</p>
 <div style="text-align:left">
 <h6> result samples </h6>
-<p><br><img src="./assets/img/det1.jpg" width="20%" title="det1" alt="det1"></img>
-<img src="./assets/img/det2.jpg" width="20%" title="det2" alt="det2"></img>
-<img src="./assets/img/det3.jpg" width="20%" title="det3" alt="det3"></img><br/></p>
+<p><br><img src="https://user-images.githubusercontent.com/32811724/147175829-eca9976a-840c-4c90-be47-417d95fb9dcc.jpg" width="20%" title="det1" alt="det1"></img>
+<img src="https://user-images.githubusercontent.com/32811724/147175831-64ffea5f-4f69-4348-bbea-3eea60051e3f.jpg" width="20%" title="det2" alt="det2"></img>
+<img src="https://user-images.githubusercontent.com/32811724/147175832-6a53944e-3605-420e-8e9b-3692a3a6fa86.jpg" width="20%" title="det3" alt="det3"></img><br/></p>
 </div>
 
 <div class="row g-5 mb-5" style="text-align:left">
@@ -237,9 +238,9 @@ const predict = async () => {
         <p> - Finally we got final Image Similarity score </p>
     </div>
     <div class="col-md-6">
-        <br><img src="./assets/img/sim1.png" width="49%"></img>
-        <img src="./assets/img/sim2.png" width="49%"></img></br>
-        <br><img src="./assets/img/sim3.png" width="49%"></img>
+        <br><img src="https://user-images.githubusercontent.com/32811724/147176073-92a8454d-9985-444d-b262-f7dfd4e51bd1.png" width="49%"></img>
+        <img src="https://user-images.githubusercontent.com/32811724/147176079-8fce7cc7-5017-4ead-9c3b-649fd01e1a67.png" width="49%"></img></br>
+        <br><img src="https://user-images.githubusercontent.com/32811724/147176080-073d99c5-0941-4394-bc08-d59c4fd16fd1.png" width="49%"></img>
         <img src="https://user-images.githubusercontent.com/32811724/142619840-5c51e3bb-9ec6-44ee-a3bc-63b35ebf0211.png" width="49%"></img></br>
     </div>
 </div>
