--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
     {{ content }}
   </div>
   <div class="col-md-6">
-    <img src="{{ site.github.url }}/assets/img/profile.jpg" alt="Home" width="80%" style="display: block; margin: 15px auto 0px auto; border: 5px solid black; border-radius:25px;">
+    <img src="https://user-images.githubusercontent.com/32811724/147176151-06c65cf0-cb74-451e-a18d-409781d7ca51.jpg" alt="Home" width="80%" style="display: block; margin: 15px auto 0px auto; border: 5px solid black; border-radius:25px;">
   </div>
 </div>
 
