--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -12,8 +12,36 @@
   <div>
     <h3 class="fw-bold border-bottom pb-3 mb-5">Main Projects</h3>
     {% if page.title == "Home" %}
-      includes publications.html home
-    
+    <h5>요약</h5>
+
+    <p>2020.06 유사 상표 이미지 검색 시스템</p>
+    <p>- 예비창업패키지 최우수상 수상</p>
+    <p>- 상표 검색 관련 특허 발명자 등록</p>
+    <p>2021.03 한자 분류, 필체 예측</p>
+    <p>- 창의융합설계 데모데이 우수상 수상</p>
+    <p>2021.09 모델 경량화, 엣지 컴퓨팅</p>
+    <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN)</p>
+    <p>2021.11 멀티GPU, 분산 컴퓨팅 학습</p>
+    <p>2021.12 빌딩 세그멘테이션</p>
+    <p>2021.12 자율주행</p>
+    <p>2021.12 헬멧, 장갑 착용여부 예측</p>
+    <p>2021.12 비전 인공지능 교육 활동 시작</p>
+    <p>2021.01 간, 종양 세그멘테이션</p>
+    <p>2021.11 폴리곤 예측-기울어진 직사각형</p>
+        
+    <h5> Keywords & Summary </h5>
+    <p>2020.06 Trademark Similarity</p>
+    <p>- Patent inventor registration</p>
+    <p>2021.03  AI Chinese Calligraphy Teacher</p>
+    <p>2021.09 Model Quantization, Edge Computing</p>
+    <p>2021.10 Segmentation, Sketching, Image Generate(GAN)</p>
+    <p>2021.11 Multi GPU, Distributed Computing</p>
+    <p>2021.12 Building Segmentation</p>
+    <p>2021.12 Self-Driving</p>
+    <p>2021.12 Helmet, Glove Detection</p>
+    <p>2021.12 Vision AI Education Activity</p>
+    <p>2021.01 Liver, Tumor Segmentation</p>
+    <p>2021.11 Polygon Detection</p>
       <h4 class="b" id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
   </div>
 </div>
