--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -32,7 +32,7 @@
         <p>2021.11 폴리곤 예측-기울어진 직사각형</p>
       </div>
       <div class="col-md-6">
-         <h5> Keywords & Summary </h5>
+        <h5> Keywords & Summary </h5>
         <p>2020.06 Trademark Similarity</p>
         <p>- Patent inventor registration</p>
         <p>2021.03  AI Chinese Calligraphy Teacher</p>
@@ -46,6 +46,7 @@
         <p>2021.01 Liver, Tumor Segmentation</p>
         <p>2021.11 Polygon Detection</p>
       </div>
+    </div>
       <h4 class="b" id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
   </div>
 </div>
