--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -27,8 +27,9 @@
         <p>2021.12 자율주행</p>
         <p>2021.12 헬멧, 장갑 착용여부 예측</p>
         <p>2021.12 비전 인공지능 교육 활동 시작</p>
-        <p>2021.01 간, 종양 세그멘테이션</p>
-        <p>2021.11 폴리곤 예측-기울어진 직사각형</p>
+        <p>2022.01 간, 종양 세그멘테이션</p>
+        <p>2022.01 폴리곤 예측-기울어진 직사각형</p>
+        <p>2022.02 이미지 스티칭(파노라마 기술)</p>
       </div>
       <div class="col-md-6">
         <h5> Keywords & Summary </h5>
@@ -42,8 +43,9 @@
         <p>2021.12 Self-Driving</p>
         <p>2021.12 Helmet, Glove Detection</p>
         <p>2021.12 Vision AI Education Activity</p>
-        <p>2021.01 Liver, Tumor Segmentation</p>
-        <p>2021.11 Polygon Detection</p>
+        <p>2022.01 Liver, Tumor Segmentation</p>
+        <p>2022.01 Polygon Detection</p>
+        <p>2022.02 Image Stitching</p>
       </div>
     </div>
       <h4 class="b" id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
