--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -21,6 +21,7 @@
         <p>2021.03 한자 분류, 필체 예측</p>
         <p>- 창의융합설계 데모데이 우수상 수상</p>
         <p>2021.09 모델 경량화, 엣지 컴퓨팅</p>
+        <p>2021.09 음성 인식, 무음 구간 제거</p>
         <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN)</p>
         <p>2021.11 멀티GPU, 분산 컴퓨팅 학습</p>
         <p>2021.12 빌딩 세그멘테이션</p>
@@ -37,6 +38,7 @@
         <p>- Patent inventor registration</p>
         <p>2021.03  AI Chinese Calligraphy Teacher</p>
         <p>2021.09 Model Quantization, Edge Computing</p>
+        <p>2021.09 Voice Activity Detection</p>
         <p>2021.10 Segmentation, Sketching, Image Generate(GAN)</p>
         <p>2021.11 Multi GPU, Distributed Computing</p>
         <p>2021.12 Building Segmentation</p>
