--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -31,6 +31,7 @@
         <p>2022.01 간, 종양 세그멘테이션</p>
         <p>2022.01 폴리곤 예측-기울어진 직사각형</p>
         <p>2022.02 이미지 스티칭(파노라마 기술)</p>
+        <p>2022.02 비지도학습, Auto Encoder를 활용한 이미지 특징 추출</p>
       </div>
       <div class="col-md-6">
         <h5> Keywords & Summary </h5>
@@ -48,6 +49,7 @@
         <p>2022.01 Liver, Tumor Segmentation</p>
         <p>2022.01 Polygon Detection</p>
         <p>2022.02 Image Stitching</p>
+        <p>2022.02 Image Feature Extraction using unsupervised learning(Auto Encoder)</p>
       </div>
     </div>
       <h4 class="b" id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
