--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,7 +20,7 @@
         <p>- 상표 검색 관련 특허 발명자 등록</p>
         <p>2021.03 한자 분류, 필체 예측 <a href="https://hyeongminmoon.github.io/FRCNN_Calligraphy/"> LINK</a></p>
         <p>- 창의융합설계 데모데이 우수상 수상</p>
-        <p>2021.09 모델 경량화, 엣지 컴퓨팅</p>
+        <p>2021.09 모델 경량화, 엣지 컴퓨팅 <a href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/"> LINK</a></p> 
         <p>2021.09 음성 인식, 무음 구간 제거</p>
         <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN)</p>
         <p>2021.11 멀티GPU, 분산 컴퓨팅 학습</p>
