--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,7 +9,7 @@
 
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Main Projects(Click LINK to see posting)</h3>
+    <h3 class="fw-bold border-bottom pb-3 mb-5">Projects(Click LINK to see posting)</h3>
     {% if page.title == "Home" %}
       
     <div class="row g-5 mb-5">
