--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -52,7 +52,7 @@
         <p>2022.02 Image Feature Extraction using unsupervised learning(Auto Encoder)</p>
       </div>
     </div>
-      <h4 class="b" id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
+      <h4 class="b" id="u2net_portrait_sketch">(2021) Portrait sketch by improving segmentation model [한국어|ENG|<a href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">repo</a>]</h4>
   </div>
 </div>
 
@@ -101,7 +101,7 @@
 </div>
     
 
-<h4 class="b" id="edge computing">(2021) Edge computing without CUDA, with quantization & tensorflow js</h4>
+<h4 class="b" id="edge computing">(2021) Edge computing without CUDA, with quantization & tensorflow js [<a href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/">한국어</a>|ENG]</h4>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/deeplab"></script>
@@ -186,7 +186,7 @@ const predict = async () => {
 // predict();
 </script>
 
-<h4 class="b" id="chinese">(2021) AI Chinese Calligraphy Teacher (인공훈장)</h4>    
+<h4 class="b" id="chinese">(2021) AI Chinese Calligraphy Teacher (인공훈장) [<a href="https://hyeongminmoon.github.io/FRCNN_Calligraphy/">한국어</a>|ENG|<a href="https://github.com/HyeongminMoon/FRCNN_Calligraphy">repo</a>]</h4>    
 <div class="row g-5 mb-5">
     <div class="col-md-6">
         <br> </br>
@@ -244,7 +244,7 @@ const predict = async () => {
     
     
     
-<h4 class="b" id="frcnn"><A href = "https://github.com/HyeongminMoon/FRCNN_trademark_similarity">(2020) Rank search by image similarity and multi label classification </A></h4>
+<h4 class="b" id="frcnn">(2020) Rank search by image similarity and multi label classification [<a href="https://hyeongminmoon.github.io/FRCNN_trademark_similarity/">한국어</a>|ENG|<a href="https://github.com/HyeongminMoon/FRCNN_trademark_similarity">repo</a>]</h4>
 
 
 <h5> Multi label classification </h5>
