--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,7 +9,7 @@
 
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Projects(Click LINK to see Review)</h3>
+    <h3 class="fw-bold border-bottom pb-3 mb-5">Summary(Click LINK to see Review)</h3>
     {% if page.title == "Home" %}
       
     <div class="row g-5 mb-5">
@@ -52,10 +52,10 @@
         <p>2022.02 Image Feature Extraction using unsupervised learning(Auto Encoder)</p>
       </div>
     </div>
-      <h4 class="b" id="u2net_portrait_sketch">(2021) Portrait sketch by improving segmentation model [한국어|ENG|<a href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">repo</a>]</h4>
   </div>
 </div>
-
+<h3 class="fw-bold border-bottom pb-3 mb-5">Main Projects</h3>
+<h4 class="b" id="u2net_portrait_sketch">(2021) Portrait sketch by improving segmentation model [한국어|ENG|<a href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">repo</a>]</h4>
 <div class="row g-5 mb-5">
   <div class="col-md-6"> 
       <br></br>
