--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -22,7 +22,7 @@
         <p>- 창의융합설계 데모데이 우수상 수상</p>
         <p>2021.09 모델 경량화, 엣지 컴퓨팅 <a style="color:blue" href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/"> LINK</a></p> 
         <p>2021.09 음성 인식, 무음 구간 제거</p>
-        <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN)</p>
+        <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN) <a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/"> LINK</a></p>
         <p>2021.11 멀티GPU, 분산 컴퓨팅 학습</p>
         <p>2021.12 빌딩 세그멘테이션</p>
         <p>2021.12 자율주행</p>
