--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -55,7 +55,7 @@
   </div>
 </div>
 <h3 class="fw-bold border-bottom pb-3 mb-5">Main Projects</h3>
-<h4 class="b" id="u2net_portrait_sketch">(2021) Portrait sketch by improving segmentation model [한국어|ENG|<a href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">repo</a>]</h4>
+<h4 class="b" id="u2net_portrait_sketch">(2021) Portrait sketch by improving segmentation model [<a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/">한국어</a>|ENG|<a href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">repo</a>]</h4>
 <div class="row g-5 mb-5">
   <div class="col-md-6"> 
       <br></br>
