--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -15,14 +15,14 @@
     <div class="row g-5 mb-5">
       <div class="col-md-6"> 
         <h5>요약</h5>
-        <p>2020.06 유사 상표 이미지 검색 시스템 <a style="color:blue" href="https://hyeongminmoon.github.io/FRCNN_trademark_similarity/"> LINK</a></p>
+        <p>2020.06 유사 상표 이미지 검색 시스템 <a style="color:blue" href="https://hyeongminmoon.github.io/FRCNN_trademark_similarity/"> <b>LINK</b></a></p>
         <p>- 예비창업패키지 최우수상 수상</p>
         <p>- 상표 검색 관련 특허 발명자 등록</p>
-        <p>2021.03 한자 분류, 필체 예측 <a style="color:blue" href="https://hyeongminmoon.github.io/FRCNN_Calligraphy/"> LINK</a></p>
+        <p>2021.03 한자 분류, 필체 예측 <a style="color:blue" href="https://hyeongminmoon.github.io/FRCNN_Calligraphy/"> <b>LINK</b></a></p>
         <p>- 창의융합설계 데모데이 우수상 수상</p>
-        <p>2021.09 모델 경량화, 엣지 컴퓨팅 <a style="color:blue" href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/"> LINK</a></p> 
+        <p>2021.09 모델 경량화, 엣지 컴퓨팅 <a style="color:blue" href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/"> <b>LINK</b></a></p> 
         <p>2021.09 음성 인식, 무음 구간 제거</p>
-        <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN) <a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/"> LINK</a></p>
+        <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN) <a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/"> <b>LINK</b></a></p>
         <p>2021.11 멀티GPU, 분산 컴퓨팅 학습</p>
         <p>2021.12 빌딩 세그멘테이션</p>
         <p>2021.12 자율주행</p>
