--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -21,17 +21,15 @@
         <p>2021.03 한자 분류, 필체 예측 <a style="color:blue" href="https://hyeongminmoon.github.io/FRCNN_Calligraphy/"> <b>LINK</b></a></p>
         <p>- 창의융합설계 데모데이 우수상 수상</p>
         <p>2021.09 모델 경량화, 엣지 컴퓨팅 <a style="color:blue" href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/"> <b>LINK</b></a></p> 
-        <p>2021.09 음성 인식, 무음 구간 제거</p>
+        <p>2021.09 음성 인식, 무음 구간 제거(VAD)</p>
         <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN) <a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/"> <b>LINK</b></a></p>
-        <p>2021.11 멀티GPU, 분산 컴퓨팅 학습</p>
         <p>2021.12 빌딩 세그멘테이션</p>
-        <p>2021.12 자율주행</p>
+        <p>2021.12 자율주행 신호분석</p>
         <p>2021.12 헬멧, 장갑 착용여부 예측</p>
-        <p>2021.12 비전 인공지능 교육 활동 시작</p>
-        <p>2022.01 간, 종양 세그멘테이션</p>
-        <p>2022.01 폴리곤 예측-기울어진 직사각형</p>
+        <p>2022.01 간, 종양 세그멘테이션 모델향상연구(Attention module, CoordConv module 등)</p>
+        <p>2022.01 기울어진 직사각형 예측 및 트래킹</p>
         <p>2022.02 이미지 스티칭(파노라마 기술)</p>
-        <p>2022.02 비지도학습, Auto Encoder를 활용한 이미지 특징 추출</p>
+        <p>2022.02 학습데이터가 없을때의 이미지 특징 추출 방법 연구(AutoEncoder, Triplet)</p>
       </div>
       <div class="col-md-6">
         <h5> Keywords & Summary </h5>
@@ -41,15 +39,13 @@
         <p>2021.09 Model Quantization, Edge Computing</p>
         <p>2021.09 Voice Activity Detection</p>
         <p>2021.10 Segmentation, Sketching, Image Generate(GAN)</p>
-        <p>2021.11 Multi GPU, Distributed Computing</p>
         <p>2021.12 Building Segmentation</p>
-        <p>2021.12 Self-Driving</p>
+        <p>2021.12 Self-Driving Signal Analyze</p>
         <p>2021.12 Helmet, Glove Detection</p>
-        <p>2021.12 Vision AI Education Activity</p>
-        <p>2022.01 Liver, Tumor Segmentation</p>
-        <p>2022.01 Polygon Detection</p>
+        <p>2022.01 Liver, Tumor Segmentation Research(with Attention module, CoordConv module)</p>
+        <p>2022.01 Polygon Detection & Tracking</p>
         <p>2022.02 Image Stitching</p>
-        <p>2022.02 Image Feature Extraction using unsupervised learning(Auto Encoder)</p>
+        <p>2022.02 Image Feature Extraction Strategies</p>
       </div>
     </div>
   </div>
