--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -27,7 +27,7 @@
         <p>2021.12 자율주행 신호분석</p>
         <p>2021.12 헬멧, 장갑 착용여부 예측</p>
         <p>2022.01 간, 종양 세그멘테이션 모델향상연구(Attention module, CoordConv module 등)</p>
-        <p>2022.01 기울어진 직사각형 예측 및 트래킹</p>
+        <p>2022.01 기울어진 직사각형 예측 및 트래킹 <a style="color:blue" href="https://hyeongminmoon.github.io/PolygonObjectDetection/"> <b>LINK</b></a></p>
         <p>2022.02 이미지 스티칭(파노라마 기술)</p>
         <p>2022.02 학습데이터가 없을때의 이미지 특징 추출 방법 연구(AutoEncoder, Triplet)</p>
       </div>
