--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -28,7 +28,7 @@
         <p>2021.12 헬멧, 장갑 착용여부 예측</p>
         <p>2022.01 간, 종양 세그멘테이션 모델향상연구(Attention module, CoordConv module 등)</p>
         <p>2022.01 기울어진 직사각형 예측 및 트래킹 <a style="color:blue" href="https://hyeongminmoon.github.io/PolygonObjectDetection/"> <b>LINK</b></a></p>
-        <p>2022.02 이미지 스티칭(파노라마 기술)</p>
+        <p>2022.02 이미지 스티칭(파노라마 기술) <a style="color:blue" href="https://hyeongminmoon.github.io/Image_Stitching/"> <b>LINK</b></a>
         <p>2022.02 학습데이터가 없을때의 이미지 특징 추출 방법 연구(AutoEncoder, Triplet)</p>
       </div>
       <div class="col-md-6">
@@ -91,8 +91,7 @@
       <p> - The above one is similar to common sketch transformation but below one bring us new style, with removed dirty information.</p>
       <p> - However, additional work seems to be needed to apply the video, such as the contrast of the screen changing naturally.</p>
       <h5 id="other-things">More</h5>
-      <p> - If you want to see the enhancing processes, plese refer this repository </p>
-      <p> - <A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A> </p>
+      <p> - If you want to see the enhancing processes, plese refer this posts [<a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/">한국어</a>|ENG|<a href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">repo</a>]</p>
   </div>
 </div>
     
