--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -22,13 +22,13 @@
         <p>- 창의융합설계 데모데이 우수상 수상</p>
         <p>2021.09 모델 경량화, 엣지 컴퓨팅 <a style="color:blue" href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/"> <b>LINK</b></a></p> 
         <p>2021.09 음성 인식, 무음 구간 제거(VAD)</p>
-        <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN) <a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/"> <b>LINK</b></a><a style="color:blue" href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch/"> <b>CODE</b></a></p>
+        <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN) <a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/"> <b>LINK</b></a> | <a style="color:blue" href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch/"> <b>CODE</b></a></p>
         <p>2021.12 빌딩 세그멘테이션</p>
         <p>2021.12 자율주행 신호분석</p>
         <p>2021.12 헬멧, 장갑 착용여부 예측</p>
         <p>2022.01 간, 종양 세그멘테이션 모델향상연구(Attention module, CoordConv module 등)</p>
         <p>2022.01 기울어진 직사각형 예측 및 트래킹 <a style="color:blue" href="https://hyeongminmoon.github.io/PolygonObjectDetection/"> <b>LINK</b></a></p>
-        <p>2022.02 이미지 스티칭(파노라마 기술) <a style="color:blue" href="https://hyeongminmoon.github.io/Image_Stitching/"> <b>LINK</b></a><a style="color:blue" href="https://github.com/HyeongminMoon/Image_Stitching/blob/main/stitching/stitching.py"> <b>CODE</b></a></p>
+        <p>2022.02 이미지 스티칭(파노라마 기술) <a style="color:blue" href="https://hyeongminmoon.github.io/Image_Stitching/"> <b>LINK</b></a> | <a style="color:blue" href="https://github.com/HyeongminMoon/Image_Stitching/blob/main/stitching/stitching.py"> <b>CODE</b></a></p>
         <p>2022.02 학습데이터가 없을때의 이미지 특징 추출 방법 연구(AutoEncoder, Triplet)</p>
       </div>
       <div class="col-md-6">
