--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -23,7 +23,7 @@
         <p>2021.09 모델 경량화, 엣지 컴퓨팅 <a style="color:blue" href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/"> <b>LINK</b></a></p> 
         <p>2021.09 음성 인식, 무음 구간 제거(VAD) <a style="color:blue" href="https://github.com/HyeongminMoon/vad_remove_silence"> <b>CODE</b></a></p>
         <p>2021.10 이미지 세그멘테이션, 이미지 스케칭, 이미지 생성(GAN) <a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/"> <b>LINK</b></a> | <a style="color:blue" href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch/"> <b>CODE</b></a></p>
-        <p>2021.12 빌딩 세그멘테이션</p>https://github.com/HyeongminMoon/qlib_predict_daily-stock_prices/tree/main/examples/benchmarks/TRA
+        <p>2021.12 빌딩 세그멘테이션</p>
         <p>2021.11 TRA모델을 활용한 나스닥 주가 예측 <a style="color:blue" href="https://github.com/HyeongminMoon/qlib_predict_daily-stock_prices"> <b>CODE</b></a></p>
         <p>2021.12 자율주행 신호분석</p>
         <p>2021.12 헬멧, 장갑 착용여부 예측</p>
