--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -29,7 +29,7 @@
         <p>2021.12 헬멧, 장갑 착용여부 예측</p>
         <p>2022.01 간, 종양 세그멘테이션 모델향상연구(Attention module, CoordConv module 등) <a style="color:blue" href="https://github.com/HyeongminMoon/pytorch-deeplab-xception/tree/master/modeling"> <b>CODE</b></a></p>
         <p>2022.01 기울어진 직사각형 예측 및 트래킹 <a style="color:blue" href="https://hyeongminmoon.github.io/PolygonObjectDetection/"> <b>LINK</b></a></p>
-        <p>2022.02 이미지 스티칭(파노라마 기술) <a style="color:blue" href="https://hyeongminmoon.github.io/Image_Stitching/"> <b>LINK</b></a> | <a style="color:blue" href="https://github.com/HyeongminMoon/Image_Stitching/blob/main/stitching/stitching.py"> <b>CODE</b></a></p>
+        <p>2022.02 이미지 스티칭(파노라마 기술) <a style="color:blue" href="https://hyeongminmoon.github.io/Image_Stitching/"> <b>LINK</b></a> | <a style="color:blue" href="https://github.com/HyeongminMoon/Image_Stitching/"> <b>CODE</b></a></p>
         <p>2022.02 학습데이터가 없을때의 이미지 특징 추출 방법 연구(AutoEncoder, Triplet)</p>
       </div>
       <div class="col-md-6">
