--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -296,7 +296,7 @@ const predict = async () => {
 
 <div class="row g-5 mb-5" style="text-align:left">
 <hr width = "90%" color = "black">
-<h5>  </h5>
+<h5> Review Postings </h5>
       {% for item in site.data.publications.featured %}
         <p><a href="{{ item.url }}">{{ item.name }}</a></p>
       {% endfor %}
