--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,7 +9,7 @@
 
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Summary(Click LINK to see Review)</h3>
+    <h3 class="fw-bold border-bottom pb-3 mb-5">Summary</h3>
     {% if page.title == "Home" %}
       
     <div class="row g-5 mb-5">
@@ -31,8 +31,12 @@
         <p>2022.01 기울어진 직사각형 예측 및 트래킹 <a style="color:blue" href="https://hyeongminmoon.github.io/PolygonObjectDetection/"> <b>LINK</b></a></p>
         <p>2022.02 이미지 스티칭(파노라마 기술) <a style="color:blue" href="https://hyeongminmoon.github.io/Image_Stitching/"> <b>LINK</b></a> | <a style="color:blue" href="https://github.com/HyeongminMoon/Image_Stitching/"> <b>CODE</b></a></p>
         <p>2022.02 학습데이터가 없을때의 이미지 특징 추출 방법 연구(AutoEncoder, Triplet)</p>
+        <p>2022.07 Microsoft 퀀트연구 오픈소스프로젝트 Qlib 컨트리뷰팅 </p>
+        <p>2022.09 실시간 얼굴인식 및 트래킹</p>
+        <p>2022.11 영상 행위 인식 모델</p>
+        <p>2023.02 영상 행위 인식 Streaming 모델 </p>
       </div>
-      <div class="col-md-6">
+<!--       <div class="col-md-6">
         <h5> Keywords & Summary </h5>
         <p>2020.06 Trademark Similarity</p>
         <p>- Patent inventor registration</p>
@@ -48,11 +52,11 @@
         <p>2022.01 Polygon Detection & Tracking</p>
         <p>2022.02 Image Stitching</p>
         <p>2022.02 Image Feature Extraction Strategies</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
-<h3 class="fw-bold border-bottom pb-3 mb-5">Project Examples (구체적인 내용은 Summary의 LINK 및 CODE 참조)</h3>
+<h3 class="fw-bold border-bottom pb-3 mb-5">Project Examples</h3>
 <h4 class="b" id="u2net_portrait_sketch">(2021) Portrait sketch by improving segmentation model [<a style="color:blue" href="https://hyeongminmoon.github.io/U-2-Net_portrait_sketch/">한국어</a>|ENG|<a href="https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">repo</a>]</h4>
 <div class="row g-5 mb-5">
   <div class="col-md-6"> 
