--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -102,7 +102,7 @@
 </div>
     
 
-<h4 class="b" id="edge computing">(2021) Edge computing without CUDA, with quantization & tensorflow js [<a href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/">한국어</a>|ENG]</h4>
+<!-- <h4 class="b" id="edge computing">(2021) Edge computing without CUDA, with quantization & tensorflow js [<a href="https://hyeongminmoon.github.io/tfjs_Edge-computing-by-inference-AImodel-on-WebGL/">한국어</a>|ENG]</h4>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/deeplab"></script>
@@ -186,7 +186,7 @@ const predict = async () => {
 
 // predict();
 </script>
-
+ -->
 <h4 class="b" id="chinese">(2021) AI Chinese Calligraphy Teacher (인공훈장) [<a href="https://hyeongminmoon.github.io/FRCNN_Calligraphy/">한국어</a>|ENG|<a href="https://github.com/HyeongminMoon/FRCNN_Calligraphy">repo</a>]</h4>    
 <div class="row g-5 mb-5">
     <div class="col-md-6">
