--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -7,6 +7,20 @@
     </style>
 </head>
 
+<h3 class="fw-bold border-bottom pb-3 mb-5">Work Experiences</h3>
+<h4 class="fw-bold border-bottom pb-3 mb-5">드림비트</h4>
+<h4 class="fw-bold border-bottom pb-3 mb-5">비타소프트</h4>
+<h4 class="fw-bold border-bottom pb-3 mb-5">아도스</h4>
+
+<h3 class="fw-bold border-bottom pb-3 mb-5">Other Experiences</h3>
+<h4 class="fw-bold border-bottom pb-3 mb-5">오픈소스 프로젝트</h4>
+<h5> Microsoft Qlib </h5>
+<h4 class="fw-bold border-bottom pb-3 mb-5">프리랜서</h4>
+
+<h3 class="fw-bold border-bottom pb-3 mb-5">Education</h3>
+<h4 class="fw-bold border-bottom pb-3 mb-5">POSTECH</h4>
+
+
 <div class="row g-5 mb-5">
   <div>
     <h3 class="fw-bold border-bottom pb-3 mb-5">Projects Summary</h3>
