--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -8,7 +8,7 @@
 </head>
 
 <h3 class="fw-bold border-bottom pb-3 mb-5">Work Experiences</h3>
-<h4 class="fw-bold pb-3 mb-5" style="color: ">드림비트</h4>
+<h4 class="fw-bold pb-3 mb-5" style="color: DarkGray">드림비트</h4>
 <h4 class="fw-bold pb-3 mb-5">비타소프트</h4>
 <h4 class="fw-bold pb-3 mb-5">아도스</h4>
 
