--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -6,11 +6,14 @@
       }
     </style>
 </head>
+<h5>🚧 이력서/포트폴리오 주소를 옮겼습니다. 🚧</h5>
+<h5>🚧 https://www.notion.so/d0b18c9ace81452c97fe4c3ab0a8037d 🚧</h5>
+
 <div class="row g-5 mb-5">
   <div>
     <h3 class="fw-bold border-bottom pb-3 mb-5">Projects Summary</h3>
     {% if page.title == "Home" %}
-      
+     
     <div class="row g-5 mb-5">
       <div class="col-md-6"> 
 <!--         <h5>요약</h5> -->
