--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -6,7 +6,7 @@
       }
     </style>
 </head>
-<h5>🚧 이력서/포트폴리오 주소를 옮겼습니다. 🚧</h5>
+<h5>🚧 이력서/포트폴리오 주소를 옮겼습니다. 이 페이지는 더이상 관리되지 않습니다. 아래 링크를 통해 이동해주세요. 🚧</h5>
 <h5>🚧 https://www.notion.so/d0b18c9ace81452c97fe4c3ab0a8037d 🚧</h5>
 
 <div class="row g-5 mb-5">
